fixed color contrast issue

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -94,7 +94,7 @@ header span {
 
 .navigation li.current {
     background-color: var(--medPurple);
-    color: var(--black);
+    color: var(--white);
 
 
 }
